--- a/_posts/2023-02-05-week02.md
+++ b/_posts/2023-02-05-week02.md
@@ -1,10 +1,19 @@
 ---
 layout: post
-title: Week 2
+title: Week 2 - Code of Conduct 
 ---
 
+## Importance of Code of Conduct 
 
-This text should be replaced by your second post.
+In my opinion, having a Code of Conduct is the best way to define a set of rules and behaviors in a centralized manner. Furthermore, a Code of Conduct helps promote inclusivity and diversity among the project's community, which can encourage more people to contribute. Being able to foster a community with diverse perspectives is important for growth of a software project, and having a Code of Conduct is a good starting point for doing so. In addition, having a Code of Conduct will set standards for conflict resolution. I assume that it is inevitable for conflicts and disagreements to occur across any open source project, so defining a structured way of resolving conflicts can promote a healthier working environment for contributors. Finally, I believe that having a Code of Conduct makes a project seem more professional, as all of the reputable open source projects I have seen contain a Code of Conduct. 
 
-The easiest way to make your second post is to edit this one.
-Go into /_posts/ and update the 2022-02-06-week02.md file.
+## Projects with No Code of Conduct
+
+I would still be willing to work on a project that does not have a Code of Conduct, as long as members of the community are holding each other accountable to be respectful of one another. Smaller or newer projects may not have a Code of Conduct, but it would be unfair for me to assume that these communities are not welcoming soley based on the absence of a Code of Conduct. Also, there may be open source projects that do not have a Code of Conduct because they have yet to deal with any behaviorial issues, and I wouldn't want to rule these projects out. 
+
+
+## Enforcing Rules 
+
+I think that the most realistic way to enforce the rules of a Code of Conduct is to have a dedicated moderation team with good leadership and a straightforward system of reporting rule infractions. Moreover, individuals who violate the rules should face consequences enforced by a moderation team, so that they are discouraged to break rules in the future. However, at the end of the day, the Internet will always have individuals who choose to be hateful and rude regardless of rules and moderation that is set in place. While there isn't any way to fully suppress these individuals, having a system in place to effectively moderate a community will encourage people to speak up against rule violations. 
+
+
