fixed 'read more'

--- a/_posts/2023-01-27-week01.md
+++ b/_posts/2023-01-27-week01.md
@@ -7,7 +7,7 @@ title: Week 1 - Intro to Open Source
 
 When I see 'open source', I associate this term with software that has freely accessible source code and software that grants users the ability to contribute to the development of the software and/or redistribute their own alternate versions of the software. Open source software facilitates community support, allowing for more eyes to suggest contributions, catch bugs in the software, and answer questions. Moreover, due to the transparent nature of open source, the freedom to access source code allows for users to find any vulnerabilities in the software. A disadvantageous aspect of open source is that the software may be used for malicious intent, but there isn't a way to restrict malicious individuals without contradicting the definition of open source. On the other hand, proprietary software often puts more focus on UI/UX than open source software, which allows for a more user-friendly platform. Additionally, proprietary software will usually have a more reliable support system, as there will be a dedicated support team for users. However, because the source code of proprietary software isn't public for everyone to contribute to, the speed of development may be slower than that of an open source software. I registered for this class because I wanted to learn how to properly contribute to open source projects. 
 
-
+<!--more-->
 
 
 
