--- a/_posts/2023-02-05-week02.md
+++ b/_posts/2023-02-05-week02.md
@@ -10,7 +10,7 @@ In my opinion, having a Code of Conduct is the best way to define a set of rules
 ## Projects with No Code of Conduct
 
 I would still be willing to work on a project that does not have a Code of Conduct, as long as members of the community are holding each other accountable to be respectful of one another. Smaller or newer projects may not have a Code of Conduct, but it would be unfair for me to assume that these communities are not welcoming soley based on the absence of a Code of Conduct. Also, there may be open source projects that do not have a Code of Conduct because they have yet to deal with any behaviorial issues, and I wouldn't want to rule these projects out. 
-
+<!--more-->
 
 ## Enforcing Rules 
 
