--- a/_posts/2023-02-11-week03.md
+++ b/_posts/2023-02-11-week03.md
@@ -6,7 +6,7 @@ title: Week 3 - Git
 ## In-class Git Exercise
 
 I think that the Git exercises we did in class were a great way to review the basic Git workflow. In addition, these exercises made me more comfortable with executing the Git workflow in the command line. In the past, I primarily used the VSCode UI to execute most of the Git commands, rather than using the command line. 
-
+<!--more-->
 # Browser Extension 
 
 The primary challenge we have faced as a group is deciding on an idea. All of us spent the last few days bouncing around different ideas, but we finally decided on making a quote generator as our browser extension. I found an API that can return quotes based on category, and I am planning on implementing something that allows the user to input the type of quote that they want (ex. happiness, hope, humor, etc.), and pass that input to the API in order to display the quote on the user's screen. Our group is planning on meeting synchronously to finalize which parts of the coding process each person will be responsible for. 
