--- a/_posts/2023-02-16-week04.md
+++ b/_posts/2023-02-16-week04.md
@@ -9,7 +9,7 @@ title: Week 4 - Browser Extension Project
 ## Group Work 
 
 As a group, we all worked well together and I liked the fact that we were able to bounce a lot of ideas off each other to see everyone's perspectives. This is one of the first group projects I have done through only asynchronously communicating with my group members. I learned that as long as everyone is contributing their own parts and updating the other group members when they have made changes, the project can still be successfully completed without having to do any in-person meetings or Zoom calls. 
-
+<!--more-->
 ## My Contributions 
 
 The browser extension we built, Quotepop, is a quote generator. Thus, I found an API that gives quotes pertaining to many different categories, and I implemented the logic for making requests to the API and displaying the output to the user via the frontend. In addition, I implemented the HTML code for our extension. 
