updating titles for blog posts

--- a/_posts/2023-04-14-week12.md
+++ b/_posts/2023-04-14-week12.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Week 12 - Tidepool
+
+
+---
+
 ## Tidepool 
 
 One primary difference between Tidepool's use of open source and enterprise use of open source is that Tidepool aims to serve the diabetes community and provide resources to help improve the lives of those with diabetes. <!--more-->On the other hand, in the context of an enterprise, they often use open source to speed up time to market and/or reduce development costs, rather than approaching open source from an altruistic standpoint. In addition, Tidepool places a much bigger emphasis on transparency compared to enterprises. As mentioned in Christopher Snider's presentation, Tidepool makes all their work 'open', from their code and design files to their Jira tickets and sprint logs. Furthermore, Tidepool and enterprises have different business models. Tidepool is a non-profit organization, so their primary focus with open source isn't to maximimize profits. Therefore, Tidepool is using open source to best cater to user needs, rather than trying to impress shareholders. Enterprises usually have complex business models around open source, and they often have to strategize around how to use open source to generate more revenue for the company. 
