--- a/_posts/2023-04-21-week13.md
+++ b/_posts/2023-04-21-week13.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Week 13 - Cathedral vs Bazaar
+
+
+---
+
 ## Cathedral and the Bazaar
 
 My choice of favorite lesson from The Cathedral and the Bazaar is "Release early. Release often. And listen to your customers." Even though my peers had great reasons for picking other lessons as their favorite, my favorite lesson still stays the same. My reasoning behind this is that the quote I chose is very applicable advice to the real world, and I've often seen success attached to following this principle. Many companies have found success with constantly releasing updates for their software/apps, and prioritizing working on user needs based on user feedback. In my opinion, there isn't much downside to releasing early and often, as it speeds up progress on the developer roadmap. 
